# lulu

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md
debian/: changelog  control  copyright  linuxdroid-download.service  linuxdroid.desktop  postinst  postrm
resources/: android_images.json
resources/icons/: create_icon.py
scripts/: build_deb.sh  verify_system.sh
src/: daemon.cpp  main.cpp
src/core/: download_manager.cpp  download_manager.h  qemu_manager.cpp  qemu_manager.h  vm_config.cpp  vm_config.h
src/gui/: main_window.cpp  main_window.h  setup_wizard.cpp  setup_wizard.h
src/utils/: system_checker.cpp  system_checker.h
